--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@types/node": "12.6.4",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "@types/underscore": "^1.9.2",
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
-    "typescript": "3.5.3"
+    "typescript": "3.5.3",
+    "underscore": "^1.9.1"
   },
   "scripts": {
     "start": "react-scripts start",
