--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "typescript": "3.5.3",
     "underscore": "^1.9.1"
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/enzyme": "^3.10.3",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/react-router-dom": "^4.3.4",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0"
   }
